# Energy_calculator_DG

./: README.md  pyproject.toml
energy/calculator_app/: forms.py  models.py  urls.py  views.py
energy/calculator_app/migrations/: 0001_initial.py  0002_clientecalculator_applied_discount_and_more.py  0003_alter_clientecalculator_applied_discount_and_more.py  0004_alter_clientecalculator_applied_discount_and_more.py  0005_alter_clientecalculator_applied_discount_and_more.py  0006_alter_clientecalculator_applied_discount_and_more.py
energy/calculator_app/templates/: cliente_filter.html  create_cliente.html  create_cliente_success.html
energy/calculator_app/templates/css/: style.css
energy/calculator_app/utils/: get_zip_code_br.py  validator_document.py
energy/energy/: settings.py
