[tool.poetry]
name = "energy"
version = "0.1.0"
description = ""
authors = ["Hendrek Rodrigues <llhendrek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
requests = "^2.28.2"
validate-docbr = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
